# SmartCourse

./: .gitignore  ARCHITECTURE.md  MICROSERVICES_MIGRATION_PLAN.md  Makefile  README.md  SETUP.md  WEEK3_REMAINING_PLAN.md  alembic.ini  docker-compose.yml  requirements.txt
alembic/: env.py
alembic/versions/: 244f2892fa58_add_enrollment_module_lesson_models.py  aaec30bb6f11_create_users_and_courses_tables.py  b3c9f1f9d5a2_add_unique_enrollment_constraint.py  c7a13d4f9b2e_add_lesson_completion_table.py  f17847dc8c52_add_ondelete_constraints_to_foreign_keys.py
app/: auth.py  config.py  database.py  dependencies.py  docker-compose.yml  exceptions.py  limiter.py  main.py  security.py  temporal_client.py  temporal_worker.py
app/api/: __init__.py  dependencies.py  exception_handlers.py
app/core/: __init__.py  exceptions.py  limiter.py  logging.py  metrics.py  security.py  tracing.py
app/events/: __init__.py  producer.py
app/infrastructure/: cache.py
app/models/: __init__.py  course.py  enrollment.py  lesson.py  lesson_completion.py  module.py  user.py
app/repositories/: analytics_repository.py  course_repository.py  enrollment_repository.py  lesson_repository.py  module_repository.py  user_repository.py
app/routers/: __init__.py  analytics.py  auth.py  courses.py  enrollments.py  lessons.py  modules.py  operations.py  publishing.py  users.py
libs/smartcourse_kafka/: pyproject.toml
libs/smartcourse_kafka/smartcourse_kafka/: avro_decoder.py  dlq_reprocessor_base.py
scripts/: kafka_consumer_example.py  trigger_enrollment.py  trigger_hello.py
(+216 files in other folders)
